Configured to AdoptOpenJDK 14 + JavaFX 14